--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1>About Me</h1>
                 <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
                 <div class="w3-left-align w3-padding-large">
-                    <p>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge
+                    <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge
                         miner in the
                         concerned subject. I am keen and enthusiast to learn technology. I have been in the field since
                         10 years.I
@@ -69,12 +69,12 @@
         <div class="w3-half w3-purple w3-center" style="min-height:800px" id="work">
             <div class="w3-left-align w3-padding-large">
                 <h1>Achievements</h1>
-                <p>I have one year experience of teaching basic level in the reputed institution of the country.
+                <p class="text-justify">I have one year experience of teaching basic level in the reputed institution of the country.
                     I have worked as beginner front end developer using html and css. I am also learning Python and
                     Django in one
                     of the reputed institution of capital city of Nepal.
                 </p>
-                <p>
+                <p class="text-justify">
                     Currently I am working as Python Developer at Flaresight, IT Company. My role is backend developer here. I make APIs in django Rest Framework.
                 </p>
             </div>
