--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     of the reputed institution of capital city of Nepal.
                 </p>
                 <p class="text-justify">
-                    Currently I am working as Python Developer at Flaresight, IT Company. My role is backend developer here. I make APIs in django Rest Framework.
+                    Currently I am working as Python Developer at Flaresight, IT Company. My role is backend developer here. I make APIs in Django Rest Framework.
                 </p>
             </div>
         </div>
