--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
         min-width: 100%;
         max-width: 1800px;
-        font-size: 22px;
+        font-size: 1.4rem;
     }
 
     /* Texts */
@@ -24,7 +24,8 @@
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
-        font-size: 64px;
+        font-size: 3rem;
+        text-align: center;
         font-family: "Source Sans Pro", sans-serif;
         animation: reveal 7s ease-in-out infinite 500ms, glow 2500ms linear infinite 2000ms;
     }
@@ -98,7 +99,6 @@
     /* Extra Bgs */
     .light-bg {
         background-color: rgba(255, 255, 255, 0.2);
-        border-radius: 2rem;
         padding: 20px 50px;
     }
 
@@ -132,7 +132,7 @@
     <div class="w3-row">
         <div class="w3-half vh-100 portfolio-bg d-flex flex-column justify-content-center align-items-center" id="sunil">
             <div class="sunil-text">Sunil Adhikari</div>
-                <a href="#about" class="w3-button w3-block hover-title w3-padding-16">About Me</a>
+            <a href="#about" class="w3-button w3-block hover-title w3-padding-16">About Me</a>
             <a href="#achievements" class="w3-button w3-block hover-title w3-padding-16">Achievements</a>
             <a href="#resume" class="w3-button w3-block hover-title w3-padding-16">Education</a>
             <a href="#notes" class="w3-button w3-block hover-title w3-padding-16">Notes</a>
@@ -215,7 +215,7 @@
     </div>
 
     <!-- Third Grid: Notes -->
-    <div class="w3-row d-flex justify-content-center notes-bg">
+    <div class="w3-row justify-content-center notes-bg">
         <div class="w3-half vh-100 d-flex flex-column justify-content-center align-items-center" id="notes">
             <div class="">
                 <h1 class="w-full text-center">Notes</h1>
