--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
                     miner in the
                     concerned subject. I am keen and enthusiast to learn technology. I have been in the field
                     since
-                    10 years.I
-                    am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
+                    10 years.I learnt Python and Django in IT Training, Kathmandu, Nepal.</p>
             </div>
         </div>
     </div>
@@ -163,14 +162,14 @@
                 <p class="text-justify">I have one year experience of teaching basic level in the reputed
                     institution of
                     the country.
-                    I have worked as beginner front end developer using html and css. I am also learning Python and
-                    Django in one
+                    I have worked as beginner front end developer using html and css. I did Python and
+                    Django course in one
                     of the reputed institution of capital city of Nepal.
                 </p>
                 <p class="text-justify">
-                    Currently I am working as Python Developer at Flaresight, IT Company. My role is backend
+                    Currently I am working as Python Developer at Flaresight, IT Company at Kuleshwor, Kathmandu, Nepal. My role is backend
                     developer
-                    here. I make APIs in Django Rest Framework.
+                    here. Under this role, microservice APIs are made using Django Rest Framework.
                 </p>
             </div>
         </div>
