--- a/index.html
+++ b/index.html
@@ -143,13 +143,8 @@
             <h1>About Me</h1>
             <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
             <div class="w3-left-align w3-padding-large">
-                <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077.
-                    I
-                    am a deep knowledge
-                    miner in the
-                    concerned subject. I am keen and enthusiast to learn technology. I have been in the field
-                    since
-                    10 years. I learnt Python and Django in IT Training, Kathmandu, Nepal.</p>
+                <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
+                    concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years. I learnt Python and Django in IT Training, Kathmandu, Nepal.</p>
             </div>
         </div>
     </div>
@@ -159,15 +154,11 @@
         <div class="w3-half vh-100 achievement-bg d-flex flex-column justify-content-center align-items-center" id="achievements">
             <div class="w3-padding-large">
                 <h1 class="text-center">Achievements</h1>
-                <p class="text-justify">I have one year experience of teaching basic level in the reputed
-                    institution of
-                    the country.
-                    I have worked as beginner front end developer using html and css. I did Python and
-                    Django course in one
+                <p class="text-justify">I have one year experience of teaching basic level in the reputed institution of the country.I have worked as beginner front end developer using html and css. I did Python and Django course in one
                     of the reputed institution of capital city of Nepal.
                 </p>
                 <p class="text-justify">
-                    Currently I am working as Python Developer at Flaresight, IT Company at Kuleshwor, Kathmandu, Nepal. My role is backend
+                    I have done internship from Dibtech Nepal located at Baneshwor, Kathmandu, Nepal. Currently I am working as Python Developer at Flaresight, IT Company at Kuleshwor, Kathmandu, Nepal. My role is backend
                     developer
                     here. Under this role, microservice APIs are made using Django Rest Framework.
                 </p>
