--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h1>About Me</h1>
             <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
             <div class="w3-left-align w3-padding-large">
-                <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
+                <p class="text-center">I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
                     concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years. I learnt Python and Django in IT Training, Kathmandu, Nepal.</p>
             </div>
         </div>
