--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+
+<!-- Favicon -->
+<link rel="shortcut icon" href="Image/image4.jpg" type="image/x-icon">
+
 <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" /> -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.7.0/dist/toastify.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
@@ -16,6 +21,11 @@
         min-width: 100%;
         max-width: 1800px;
         font-size: 1.4rem;
+    }
+
+    /* Text alignments */
+    .text-justify {
+        text-align: justify;
     }
 
     /* Texts */
@@ -130,7 +140,8 @@
 
     <!-- First Grid: Logo & About -->
     <div class="w3-row">
-        <div class="w3-half vh-100 portfolio-bg d-flex flex-column justify-content-center align-items-center" id="sunil">
+        <div class="w3-half vh-100 portfolio-bg d-flex flex-column justify-content-center align-items-center"
+            id="sunil">
             <div class="sunil-text">Sunil Adhikari</div>
             <a href="#about" class="w3-button w3-block hover-title w3-padding-16">About Me</a>
             <a href="#achievements" class="w3-button w3-block hover-title w3-padding-16">Achievements</a>
@@ -143,24 +154,35 @@
             <h1>About Me</h1>
             <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
             <div class="w3-left-align w3-padding-large">
-                <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
-                    concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years. I learnt Python and Django in IT Training, Kathmandu, Nepal.</p>
+                <p class="text-justify">I am a student of computer science who passed bachelor's degree in 2077.
+                    I
+                    am a deep knowledge
+                    miner in the
+                    concerned subject. I am keen and enthusiast to learn technology. I have been in the field
+                    since
+                    10 years.I
+                    am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
             </div>
         </div>
     </div>
 
     <!-- Second Grid: Work & Resume -->
     <div class="w3-row">
-        <div class="w3-half vh-100 achievement-bg d-flex flex-column justify-content-center align-items-center" id="achievements">
+        <div class="w3-half vh-100 achievement-bg d-flex flex-column justify-content-center align-items-center"
+            id="achievements">
             <div class="w3-padding-large">
                 <h1 class="text-center">Achievements</h1>
-                <p class="text-justify">I have one year experience of teaching basic level in the reputed institution of the country.I have worked as beginner front end developer using html and css. I did Python and Django course in one
+                <p class="text-justify">I have one year experience of teaching basic level in the reputed
+                    institution of
+                    the country.
+                    I have worked as beginner front end developer using html and css. I am also learning Python and
+                    Django in one
                     of the reputed institution of capital city of Nepal.
                 </p>
                 <p class="text-justify">
-                    I have done internship from Dibtech Nepal located at Baneshwor, Kathmandu, Nepal. Currently I am working as Python Developer at Flaresight at Kuleshwor, Kathmandu, Nepal. My role is backend
+                    Currently I am working as Python Developer at Flaresight, IT Company. My role is backend
                     developer
-                    here. Under this role, microservice APIs are made using Django Rest Framework.
+                    here. I make APIs in Django Rest Framework.
                 </p>
             </div>
         </div>
@@ -229,7 +251,8 @@
                 </ol>
             </div>
         </div>
-        <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center" id="contact">
+        <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center"
+            id="contact">
             <h1>Contact</h1>
             <form id="myForm" class="w3-container w3-padding-32 light-bg" action="handleSubmit">
                 <div class="w3-section">
@@ -265,7 +288,9 @@
 
 
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.7.0/dist/toastify.min.js"></script>
     <script>
