--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="Image/image4.jpg" type="image/x-icon">
+<link rel="shortcut icon" href="Image/favicon.png" type="image/x-icon">
 
 <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" /> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
