--- a/index.html
+++ b/index.html
@@ -175,14 +175,15 @@
                 <p class="text-justify">I have one year experience of teaching basic level in the reputed
                     institution of
                     the country.
-                    I have worked as beginner front end developer using html and css. I am also learning Python and
+                    I have worked as beginner front end developer using html and css. I learnt Python and
                     Django in one
-                    of the reputed institution of capital city of Nepal.
+                    of the top ranked training center of capital city of Nepal.
                 </p>
                 <p class="text-justify">
-                    Currently I am working as Python Developer at Flaresight, IT Company. My role is backend
-                    developer
-                    here. I make APIs in Django Rest Framework.
+                    I did my internship from Dibtech Nepal of Baneshwor, Kathmandu, Nepal.
+                    Currently I am working as Python Developer at Flaresight located at Kuleshwor, Kathmandu, Nepal. My role is backend
+                    developer using django framework
+                    here. Microservice APIs are made in Django Rest Framework under this role.
                 </p>
             </div>
         </div>
