--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <a href="#resume" class="w3-button w3-block hover-title w3-padding-16">Education</a>
             <a href="#notes" class="w3-button w3-block hover-title w3-padding-16">Notes</a>
             <a href="#contact" class="w3-button w3-block hover-title w3-padding-16">Contact</a>
+            <a href="#links" class="w3-button w3-block hover-title w3-padding-16">Social Links</a>
         </div>
 
         <div class="w3-half vh-100 about-bg d-flex flex-column justify-content-center align-items-center" id="about">
@@ -272,7 +273,7 @@
             </form>
         </div>
     </div>
-
+     <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center" id="links">
     <footer class="footer">
         <div class="container text-center">
             <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
@@ -282,6 +283,7 @@
             <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
         </div>
     </footer>
+     </div>
 
     <!-- Show toast notifications -->
     <div class="toast-container" id="toastContainer"></div>
